	(--nooverwrite-tagx-apps-dot-xml): new optional command line opt
	($DO_OVERWRITE_TAGX_DOT_XML): new "overwrite flag
	($DO_OVERWRITE_TAGX_APPS_DOT_XML): new "overwrite flag
	(maybe_create_tagx_dot_xml_or_die): new function
	(maybe_create_tagx_apps_dot_xml_or_die): new function
	($BEDROCK_DIST_PEBBLES_DIR): new var filtered in at build time

	* configure.ac (pebblesdir): New AC_SUBST application
	* src/main/bedrock/pebbles/Makefile.am (pebblesdir): Moved
	  definition to top-level configure.ac file

	* src/main/perl/bin/bedrock-create-site.in (symlink): Added $! to
	  die messages thrown from all failed symlink() invocations

2008-03-03  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/bedrock-create-site.in
	(with_changed_directory): new utility function. Used to update all
	  invocations of symlink() to create relative symlinks.

	* src/main/perl/bin/bedrock-create-site.in
	(--overwrite-admin-index-dot-roc): new optional command line opt
	(--nooverwrite-admin-index-dot-roc): new optional command line opt
	(--overwrite-admin-index-dot-rock): new optional command line opt
	(--nooverwrite-admin-index-dot-rock): new optional command line opt
	($DO_OVERWRITE_ADMIN_INDEX_DOT_ROC):  new "overwrite" flag
	($DO_OVERWRITE_ADMIN_INDEX_DOT_ROCK): new "overwrite" flag
	(__maybe_create_index_dot_rock_or_die): new parameterized function
	  that is a generalization of the old
	  'maybe_create_index_dot_rock_or_die()' function.
	(__maybe_create_named_index_dot_rock_file_or_die): new specialized content
	  producing worker func
	(maybe_create_index_dot_rock_or_die): changed to invoke above
	  parameterized worker func
	(maybe_create_admin_index_dot_rock_or_die): new func; also invokes
	  the above parameterized worker func


	* src/main/perl/bin/bedrock-create-site.in
	(maybe_create_apache_mod_perl_startup_dot_pl_file_or_die): new function
	(--apache-mod-perl-startup=FILE): new required command line opt