@@ -477,9 +477,9 @@ sub __create_directories_or_die {
         print STDERR qq{${PROG} (info): checking for the existince of directory "$dir"...}
             if $BE_VERBOSE;
         if (-d $dir) {
-            print STDERR qq{found.\n};
+            print STDERR qq{found.\n} if $BE_VERBOSE;
         } else {
-            print STDERR qq{not found; creating.\n};
+            print STDERR qq{not found; creating.\n} if $BE_VERBOSE;
             eval { mkpath( $dir ) };
             if ($@) {
                 warn(qq{${PROG} (error): was unable to create dir "${dir}": $@\n});
@@ -809,15 +809,15 @@ sub __maybe_create_named_file_or_die {
         if $BE_VERBOSE;
     if (-f $mainfile) {
         if ($overwrite_mainfile_flag) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
             $create_mainfile = 1;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
         }
     }
     else {
-        print STDERR qq{not found; will create.\n};
+        print STDERR qq{not found; will create.\n} if $BE_VERBOSE;
         $create_mainfile = 1;
     }
 
@@ -835,15 +835,15 @@ sub __maybe_create_named_file_or_die {
         if $BE_VERBOSE;
     if (-f $symlinkfile) {
         if ($overwrite_symlinkfile_flag) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
             $create_symlinkfile = 1;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
         }
     }
     else {
-        print STDERR qq{not found; will create.\n};
+        print STDERR qq{not found; will create.\n} if $BE_VERBOSE;
         $create_symlinkfile = 1;
     }
 
@@ -1194,15 +1194,15 @@ sub maybe_copy_dist_error_dot_rock_or_die {
         if $BE_VERBOSE;
     if (-f $errorrock) {
         if ($DO_OVERWRITE_ERROR_DOT_ROCK) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
             $copy_errorrock = 1;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
         }
     }
     else {
-        print STDERR qq{not found; will copy from Bedrock distribution.\n};
+        print STDERR qq{not found; will copy from Bedrock distribution.\n} if $BE_VERBOSE;
         $copy_errorrock = 1;
     }
 
@@ -1226,15 +1226,15 @@ sub maybe_copy_dist_error_dot_rock_or_die {
         if $BE_VERBOSE;
     if (-f $errorroc) {
         if ($DO_OVERWRITE_ERROR_DOT_ROC) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
             $create_errorroc = 1;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
         }
     }
     else {
-        print STDERR qq{not found; will create.\n};
+        print STDERR qq{not found; will create.\n} if $BE_VERBOSE;
         $create_errorroc = 1;
     }
 
@@ -1288,15 +1288,15 @@ sub maybe_copy_dist_bedrock_dot_cgi_or_die {
         if $BE_VERBOSE;
     if (-f $bedrockcgi) {
         if ($DO_OVERWRITE_BEDROCK_DOT_CGI) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
             $copy_bedrockcgi = 1;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
         }
     }
     else {
-        print STDERR qq{not found; will copy from Bedrock distribution.\n};
+        print STDERR qq{not found; will copy from Bedrock distribution.\n} if $BE_VERBOSE;
         $copy_bedrockcgi = 1;
     }
 
@@ -1746,15 +1746,15 @@ sub maybe_create_apache_mod_perl_startup_dot_pl_file_or_die {
         if $BE_VERBOSE;
     if (-f $args{APACHE_MOD_PERL_STARTUP_CONF_PATH}) {
         if ($DO_OVERWRITE_APACHE_MOD_PERL_STARTUP_CONF) {
-            print STDERR qq{found; will overwrite.\n};
+            print STDERR qq{found; will overwrite.\n} if $BE_VERBOSE;
         }
         else {
-            print STDERR qq{found; will not overwrite.\n};
+            print STDERR qq{found; will not overwrite.\n} if $BE_VERBOSE;
             return;
         }
     }
     else {
-        print STDERR qq{not found; will create.\n};
+        print STDERR qq{not found; will create.\n} if $BE_VERBOSE;
     }
 
     # Create any parent directories, if needed
@@ -2119,9 +2119,7 @@ C<bedrock-create-site> is part of the C<bedrock> project.
 The C<bedrock-create-site> program is a command line program that may be
 used to create the initial scaffolding for a Bedrock project. It's purpose
 is to automate the handful of necessary (but simple) steps needed to start
-working on a project build on Bedrock. It also provides support for some
-optional (but common) setup steps (such as creating a MySQL database to use
-as the backend for site authentication).
+working on a project build on Bedrock.
 
 There are two primary users of C<bedrock-create-site>: software developers
 who need to setup a Bedrock-enabled site and packagers (of DEBs, RPMs,
@@ -2132,8 +2130,15 @@ similar). Packagers may invoke the program from Makefiles, or maybe as a
 worker tool invoked by a platform-specific installation framework (such as
 L<debconf(7)>).
 
-The program makes a number of assumptions about how you want your site
-configured:
+To the extent possible, the program attempts to provide I<mechanism>, but not
+mandate I<policy>. A design goal is to allow the program to be useful
+regardless of the Unix-like system on which it is run. Toward this end, it has
+been made highly configurable. It is intended that the program can be invoked
+to create a working Bedrock site conforming to whatever Apache web site
+conventions are in use at your location.
+
+Despite the above design goals, the program makes a number of assumptions
+about how you want your site configured:
 
 =over 4
 
@@ -2358,14 +2363,11 @@ authentication.
 
 This option controls the Apache directives that will be written to the file
 specified by the C<--site-conf=FILE> option (or rather the file specified by
-the optional C<--apache-auth-db-include=FILE> option, if specified). It also
-affects how the program communicates with the database (if the user
-explicitly requests it).
-
-B<FIXME>: Create pointers to options that control whether or not the program
-will attempt to communicate with a database.
+the optional C<--apache-auth-db-include=FILE> option, if specified).
 
 Valid values for TYPE include: "mysql".
+
+If not specified, the default value of "mysql" will be used.
 
 See the L</"BUGS"> section below for notes regarding support for databases
 other than MySQL.
@@ -2386,6 +2388,11 @@ Note that providing the password on the command line will make it visible to
 all users on the host for the duration of the program run (via the L<ps(1)>
 command or similar). If you do not provide the password on the command line,
 then C<bedrock-create-site> will prompt you for it (this is more secure).
+
+See the L</"EXAMPLES"> section below for an example of "wrapping"
+C<bedrock-create-site> with an L<expect(1)> script that provides the
+convenience of not being prompted, but is more secure than providing the
+password on the command line.
 
 
 =item --apache-auth-db-host=HOSTNAME
@@ -2431,13 +2438,34 @@ defaults to "Please Enter Your Site Credentials".
 
 =head2 Overwrite Options
 
+The default behavior of C<bedrock-create-site> is to not overwrite any
+existing files; any file that the program would otherwise create will not be
+overwritten if it already exists.
+
+There is a global C<--overwrite> option that changes the default behavior to
+overwrite any existing files.
+
+There is one C<--overwrite-foo> command line option and one
+C<--nooverwrite-foo> command line option for every file created by
+C<bedrock-create-site>.
+
+When using the default (non-overwriting) bahavior, you may indicate exceptions
+for individual files that you would like to have overwritten via individual
+C<--overwrite--foo> options.
+
+When using the global C<--overwrite> behavior, you may indicate exceptions for
+individual files that you I<do not> want overwritten via individual
+C<--nooverwrite-foo> options.
+
 =over 4
 
 =item -O, --overwrite
 
-(Optional) Causes any existing files to be overwritten (except for those
-explicitly protected via C<--nooverwrite-*> options). The default behavior
-is to not overwrite any existing files.
+(Optional) Changes the default behavior of the program to be "overwrite if
+found". Causes any existing files to be overwritten (except for those
+explicitly protected via C<--nooverwrite-*> options). The default behavior (if
+the C<--overwrite> option is not specified) is to not overwrite any existing
+files.
 
 If you only want to overwrite a couple of files, you will be better off
 using one of the finer-grained C<--overwrite-*> options.
@@ -2580,9 +2608,204 @@ default behavior, unless the global C<--overwrite> option has been specified.
 =back
 
 
+=head1 TIPS
+
+=over 4
+
+=item *
+
+Always use the C<--verbose> command line option.
+
+The program prints a fairly detailed report of what it is doing when run in
+verbose mode. It indicates the files and directories that it is looking for,
+whether or not it found them, and whether or not it is going to overwrite
+each.
+
+When you do not use the C<--verbose> option, no output is created (except to
+prompt you for the Apache auth db pasword if you have not provided it via the
+C<--apache-auth-db-pass=PASSWORD> option).
+
+
+=item *
+
+If you intend to invoke the program directly at the command line (as opposed
+to via a Makefile or something else pre-canned), or intend to invoke the
+program repeatedly with different options for experimentation, create a shell
+script that invokes C<bedrock-create-site> and invoke your wrapper script
+instead. This will serve as documentation of how you actually ran the program,
+and can serve as a sort of canned configuration for creating Bedrock sites on
+your machine:
+
+    #! /bin/sh
+    DOMAIN_NAME='example.com'
+    $ bedrock-create-site \
+          --domain-name=${DOMAIN_NAME} \
+          --site-dir=/var/www/vhosts/${DOMAIN_NAME} \
+          --site-conf=/etc/httpd/conf.d/${DOMAIN_NAME}.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/${DOMAIN_NAME}-startup.pl \
+          --apache-auth-db-user=foouser
+
+Also see a way to do something similar in an L<expect(1)> script in the
+L</"EXAMPLES"> section below.
+
+=back
+
+
 =head1 EXAMPLES
 
-B<FIXME>: document examples
+
+=head2 Example 1
+
+The simplest invocation of the program looks like this:
+
+    $ bedrock-create-site \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser
+
+The above command will cause the program to prompt for the Apache auth db
+password. If any of the files that the program would create already exist,
+they I<will not> be overwritten.
+
+
+=head2 Example 2
+
+Identical to the previous example, only this example passes the Apache auth db
+password on the command line. This is less secure than the previous example
+(because the password will show up in process listings on the system), but
+prevents the program from prompting for the password:
+
+    $ bedrock-create-site \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser \
+          --apache-auth-db-pass=foopassword
+
+The same effect can be achieved by using an C<expect(1)> script that is only
+readable by the user:
+
+    $ touch bedrock-create-site-example.com
+    $ chmod 0700 bedrock-create-site-example.com
+    $ $EDITOR bedrock-create-site-example.com  # add following contents
+
+        #!/usr/bin/expect -f
+
+        # bedrock-create-site-example.com: Simple wrapper around
+        # bedrock-create-site(1).
+        #
+        # Demonstrates a secure way of automating the invocation of the program
+        # without passing the Apache auth db password on the command line.
+
+        set timeout 10
+
+        # We don't want the user to see the password prompt
+        log_user 0
+
+        spawn "/path/to/bedrock-create-site" \
+            --verbose \
+            --domain-name=example.com \
+            --site-dir=/var/www/vhosts/example.com \
+            --site-conf=/etc/httpd/conf.d/example.com.conf \
+            --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+            --apache-auth-db-user=foouser \
+            $argv
+        expect -re "DB Password for .*: "
+        send -- "foopass\r"
+
+        # Restore user-visible output
+        log_user 1
+
+        interact
+        # (pid, spawn_id, -1|0, status|errno) = wait
+        set waitout [wait]
+        flush stdout
+        #
+        # Exit with the exit status of bedrock-create-site
+        exit [lindex $waitout 3]
+
+
+=head2 Example 3
+
+Turn on verbose output so the program reports its progress, findings,
+overwrite decisions, etc:
+
+    $ bedrock-create-site \
+          --verbose \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser
+
+Notice that if you run the above command repeatedly, the output of successive
+invocations indicates that the files that the program would otherwise write
+already exist. This demonstrates that the default behavior of the program is
+to I<not> overwrite any file that already exists.
+
+
+=head2 Example 4
+
+Change the default behavior of the program (via the C<--overwrite> option) to
+always overwrite files:
+
+    $ bedrock-create-site \
+          --overwrite \
+          --verbose \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser
+
+Notice that if you run the above command repeatedly, unlike the previous
+example, the output of successive invocations now indicates that the program
+is overwriting any and all of the files that already exist.
+
+
+=head2 Example 5
+
+Change the default behavior of the program to always overwrite files, but use
+the fine-grained C<--nooverwrite-site-conf> option to protect our existing
+Apache site configuration file:
+
+    $ bedrock-create-site \
+          --overwrite \
+          --nooverwrite-site-conf \
+          --verbose \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser
+
+The output of successive invocations of the above command will indicate that
+all found files are being overwritten I<except> for the file specified by the
+C<--site-conf=FILE> option, 'example.com.conf'.
+
+
+=head2 Example 6
+
+This is the inverse of the previous example. Here we take advantage of the
+default behavior of the program to not overwrite any existing files, but we
+indicate an exception to this default policy (via the
+C<--overwrite-site-conf>) for the site conf file:
+
+    $ bedrock-create-site \
+          --overwrite-site-conf \
+          --verbose \
+          --domain-name=example.com \
+          --site-dir=/var/www/vhosts/example.com \
+          --site-conf=/etc/httpd/conf.d/example.com.conf \
+          --apache-mod-perl-startup=/etc/httpd/conf.d/example.com-startup.pl \
+          --apache-auth-db-user=foouser
+
+The output of successive invocations of the above command will indicate that
+existing files are not being overwritten, I<except> for the file specified by
+the C<--site-conf=FILE> option.
 
 
 =head1 DIAGNOSTICS
@@ -2633,14 +2856,14 @@ assumes that you know what you are doing.
 
 The site authentication capabilities are currently non-optional. While it's
 possible to run a Bedrock site that does not require authentication, the sites
-where it is currently deployed all require authentication of some
+where Bedrock is currently deployed all require authentication of some
 type. Nevertheless, we should probably make the program more general to allow
 creation of simple sites that have no authentication requirements.
 
 =item *
 
-We currently check for the existence of various symlinks symlink, but we do
-not check that the targets of those links are sane.
+We currently check for the existence of various symlinks, but we do not check
+that the targets of those links are sane.
 
 =item *
 
@@ -2727,6 +2950,7 @@ Copyright 2008 Signature Information Solutions, LLC
 
 This is free software. You may redistribute copies of it under the terms of
 the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
+
 There is NO WARRANTY, to the extent permitted by law.
 
 =cut
