@@ -16,6 +16,7 @@
 	(maybe_create_tagx_dot_xml_or_die): new function
 	(maybe_create_tagx_apps_dot_xml_or_die): new function
 	($BEDROCK_DIST_PEBBLES_DIR): new var filtered in at build time
+	(POD): Cleaned up existing and fleshed out bedrock-create-site(1) man page
 
 	* configure.ac (pebblesdir): New AC_SUBST application
 	* src/main/bedrock/pebbles/Makefile.am (pebblesdir): Moved
